--- a/src/main/webapp/WEB-INF/resource/usermsg_en_GB.properties
+++ b/src/main/webapp/WEB-INF/resource/usermsg_en_GB.properties
@@ -1,3 +1,3 @@
 username.required.user.name=Please enter a name
 money.negative=Invalid money
-typeMismatch.user.birthday=Style:Jun 13, 2017 9:40:57 PM
+typeMismatch.user.birthday=Style:17-Jun-2017 20:36:51
